# nitzan_shinnies_inspectio_exercise

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  PLAN.md  README.md  SYSTEM_OVERVIEW.md  docker-compose.memory-s3.yml  docker-compose.yml  pyproject.toml
.cursor/rules/: inspectio-greenfield-no-v1-implementation.mdc  inspectio-implementation-no-legacy.mdc  inspectio-testing-and-performance.mdc  interview-skills.mdc
deploy/docker/: Dockerfile
deploy/kubernetes/: README.md  api.yaml  configmap.yaml  ingress.yaml  inspectio-api.yaml  inspectio-expander.yaml  inspectio-l1.yaml  inspectio-notification.yaml  inspectio-persistence-writer-shards-k4.yaml  inspectio-persistence-writer-shards-k8.yaml  inspectio-persistence-writer.yaml  inspectio-worker-shards-k4.yaml  inspectio-worker-sts.yaml  inspectio-worker.yaml  iter4-api-deployment.yaml  iter4-dynamodb-sms_messages.yaml  iter4-worker-statefulset.yaml  (+21 more)
frontend/: nginx.conf
plans/: CORE_LIFECYCLE.md  IMPLEMENTATION_PHASES.md  INGEST_WITHOUT_KINESIS_DESIGN_PLAN.md  IN_MEMORY_LOCAL_S3.md  LOCAL_S3.md  MOCK_SMS.md  NEW_SYSTEM_IMPLEMENTATION_BLUEPRINT.md  NOTIFICATION_SERVICE.md  PERFORMANCE_ARCH_FUTURE.md  PLAN.md  RESILIENCE.md  REST_API.md  SHARDING.md  SQS_FIFO_THROUGHPUT_AND_ADMISSION_PLAN.md  SYSTEM_OVERVIEW.md  TESTS.md  TEST_LIST.md  TEST_TRACEABILITY.md  V2_THROUGHPUT_POST_MORTEM.md  V3_ASYNC_PIPELINE_IMPLEMENTATION_PLAN.md  openapi.yaml
scripts/: compose_smoke.py  full_flow_load_test.py  p9_compose_smoke.py  run_p12_9_plan_d_benchmark.sh  source_inspectio_aws_env.sh  v3_load_test.py  v3_p12_9_iter3_rerun_hygiene.py  v3_p12_9_lag_phase_analyze.py  v3_p12_9_measurement_lock.py  v3_p12_9_ws2_observability_evidence.py  v3_persistence_throughput_report.py  v3_sent_throughput_s3_verify.py  v3_single_bulk_admit_bench.py  v3_sustained_admit.py  v4_iter4_sustained_new_message.py
tests/: README.md  conftest.py  fakes.py  reference_spec.py  test_healthz.py
v1_obsolete/: README.md
v1_obsolete/project/: README.md  docker-compose.yml  pyproject.toml
v1_obsolete/project/deploy/kubernetes/: README.md  api.yaml  configmap.yaml  health-monitor.yaml  kustomization.yaml  namespace.yaml  persistence-pvc.yaml  persistence.yaml  worker.yaml
v1_obsolete/project/frontend/: nginx.conf
v1_obsolete/project/frontend/public/js/: constants.js
v1_obsolete/project/obsolete_tests/: README.md  __init__.py  conftest.py
v1_obsolete/project/obsolete_tests/e2e/: stack.py  test_multi_component_flow.py
v1_obsolete/project/obsolete_tests/integration/: README.md  test_api_activation.py  test_integration_stack_liveness.py  test_notification_outcomes.py  test_worker_bootstrap.py
v1_obsolete/project/obsolete_tests/unit/: test_idempotency.py  test_mock_sms_contract.py  test_notification_redis_hydration_leader.py  test_persistence_retry.py  test_recording_persistence.py  test_retry_timeline.py  test_sharding.py  test_staging_persistence.py  test_terminal_keys_utc.py  test_terminal_lookup.py  test_wakeup_cadence.py  test_worker_config.py  test_worker_mock_sms_client.py  test_worker_runtime.py
v1_obsolete/project/src/inspectio_exercise/api/: app.py  config.py  schemas.py  use_cases.py
v1_obsolete/project/src/inspectio_exercise/common/: pending_stream_constants.py
v1_obsolete/project/src/inspectio_exercise/domain/: __init__.py  assignment_scheduler_surface.py  idempotency.py  sharding.py  sms_outcome.py  utc_paths.py
v1_obsolete/project/src/inspectio_exercise/health_monitor/: __init__.py  app.py  integrity_run.py
v1_obsolete/project/src/inspectio_exercise/mock_sms/: app.py  audit.py  config.py
v1_obsolete/project/src/inspectio_exercise/notification/: config.py  keys.py  persistence_client.py
v1_obsolete/project/src/inspectio_exercise/notification/store/: __init__.py  factory.py  redis_store.py
v1_obsolete/project/src/inspectio_exercise/persistence/: interface.py  key_policy.py  local_s3.py  memory_s3.py  schemas.py
v1_obsolete/project/src/inspectio_exercise/worker/: __init__.py  app.py  outcome_notifier.py  terminal_scanner.py
v1_obsolete/project/tests/: README.md  fakes.py  reference_spec.py
v1_obsolete/project/tests/e2e/: stack.py
v1_obsolete/project/tests/integration/: conftest.py  test_integration_stack_liveness.py  test_notification_outcomes.py
v1_obsolete/project/tests/unit/: test_api_repeat_submit_performance.py  test_container_logging.py  test_health_monitor_fetch.py  test_idempotency.py  test_mock_sms_contract.py  test_pending_stream_ingest.py  test_recording_persistence.py  test_staging_persistence.py  test_terminal_keys_utc.py  test_worker_runtime.py
(+645 files in other folders)
