[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inspectio"
version = "0.0.0"
description = "Inspectio SMS retry scheduler (greenfield; see plans/)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-asyncio>=0.23.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: no I/O; pure domain, clocks, hashing, journal line parse/build (§28.2)",
    "integration: I/O to docker services, moto, or LocalStack (§28.2)",
    "e2e: multi-container stack; optional CI tier (§28.2)",
    "performance: load scripts / large N; AWS claims only in-cluster (§28.2)",
]
