[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inspectio"
version = "0.0.0"
description = "Inspectio SMS retry scheduler (v3; see plans/)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aioboto3>=12.0.0",
    "orjson>=3.9.0",
    "fastapi>=0.109.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "redis>=5.0.0",
    "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-asyncio>=0.23.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
norecursedirs = [
    "*.egg",
    ".*",
    "_darcs",
    "build",
    "CVS",
    "dist",
    "node_modules",
    "venv",
    "{arch}",
]
testpaths = ["tests"]
markers = [
    "unit: no I/O; pure domain, clocks, hashing, journal line parse/build",
    "integration: I/O to docker services, moto, or LocalStack",
    "e2e: multi-container stack; optional CI tier",
    "performance: load scripts / large N; AWS claims only in-cluster",
]
