[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inspectio-exercise"
version = "0.1.0"
description = "High-Throughput SMS Retry Scheduler (interview exercise)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aioboto3>=13.0.0",
    "boto3>=1.35.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "asgi-lifespan>=2.1.0",
    "fakeredis>=2.23.0",
    "moto[s3]>=5.0.0",
    "pre-commit>=3.7.0",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
inspectio-api = "inspectio_exercise.cli:run_api"
inspectio-health-monitor = "inspectio_exercise.cli:run_health_monitor"
inspectio-mock-sms = "inspectio_exercise.cli:run_mock_sms"
inspectio-notification = "inspectio_exercise.cli:run_notification"
inspectio-persistence = "inspectio_exercise.cli:run_persistence"
inspectio-worker = "inspectio_exercise.cli:run_worker"

[tool.hatch.build.targets.wheel]
packages = ["src/inspectio_exercise"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "e2e: end-to-end / multi-component (plans/TESTS.md §6)",
    "integration: integration tests (plans/TESTS.md §5)",
    "unit: unit tests (plans/TESTS.md §4)",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
]
ignore = [
    "B008",   # FastAPI Depends() in defaults — intentional
    "E501",   # line length — enforced loosely; long strings in tests/plans
]

[tool.ruff.lint.isort]
known-first-party = ["inspectio_exercise"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
